--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,25 +4,29 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Roasters Club</title>
 </head>
-<body>
-    <header class="encabezado">
-        <h1>contacto</h1>
-        <ul>
-            <li> <a href="../index.html"> Inicio</a></li>
-            <li> <a href="nosotros.html"> Nosotros</a></li>
-            <li> <a href="suscripcion.html"> Suscripción</a></li>
-            <li> <a href="caferoaster.html"> Café Roaster</a></li>
-            <li> <a href="contacto.html"> Contacto</a></li>
-        </ul>
-
+<body class="contenedorbody">
+    <header class="header">
+        <div class="cajalogo">
+            <img src="../img/logo.png" alt="logo" class="logo">
+        </div>
+        <nav class="cajanav"> 
+            <ul class="listanav">
+                <li> <a href="../index.html"> Inicio</a></li>
+                <li> <a href="nosotros.html"> Nosotros</a></li>
+                <li> <a href="suscripcion.html"> Suscripción</a></li>
+                <li> <a href="caferoaster.html"> Café Roaster</a></li>
+                <li> <a href="contacto.html"> Contacto</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <main>
-        <h1>Contacto</h1>
+    <main class="containercontacto">
         
+        <br>
         <form>
             <fieldset>
                 <legend>No te quedes con las dudas, escribinos!</legend>
@@ -46,8 +50,11 @@
             </fieldset>
         </form>
     </main>
-    <footer>
+    <!-- footer -->
+    <footer class="footer">
         <p>Natasha Stangen 2022</p>
-    </footer>
+    </footer> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 </html>
