--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
     <title>Roasters Club</title>
 </head>
@@ -24,19 +25,21 @@
     </header>
     <main class="main">
         <div>
-            <img src="../img/porqueelegirnos.png" alt="porqueelegirnos">
-            <h1>Roaster Club, la mejor suscripción de café</h1>
+            <img class="imagennosotros" src="../img/porqueelegirnos.png" alt="porqueelegirnos">
+            <!-- <h1 class="titulonosotros">Roaster Club, la mejor suscripción de café</h1>
             <p>dadasdasdasdasdasdasda</p>
         </div>    
         <div>
             <h2>Conocé al equipo Roaster</h2>
             <p>Ellos son los profesionales encargados de seleccionar <br> mes el mejor café del mundo para vos. Teniendo en cuenta todas las variables para llevar <br> a tu puerta un producto de excelencia.</p>
-            <!--Carrusel-->
             <img src="../img/person1.png" alt="person1">
-        </div>
+        </div> -->
     </main>
-    <footer>
+    <!-- footer -->
+    <footer class="footer">
         <p>Natasha Stangen 2022</p>
-    </footer>
+    </footer> 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+
 </body>
 </html>
